# mcp-gender-detector

./: .gitignore  README.md  install.sh  pyproject.toml
src/mcp_gender_detector/: server.py
