[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gender-detector"
version = "0.1.0"
description = "MCP server that detects gender (Mr/Ms) from a person's first name"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hubert" }
]
keywords = ["mcp", "gender", "detection", "name"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "gender-guesser>=0.4.0",
]

[project.scripts]
mcp-gender-detector = "mcp_gender_detector.server:main"
